better placed of elements in 'MoreInfo\slide' and use redux hooks for singleUser

--- a/src/common/SCSS/MoreInfo.scss
+++ b/src/common/SCSS/MoreInfo.scss
@@ -49,7 +49,7 @@
       }
       .about {
         text-align: center;
-        font-family: fonts.$header-font;
+        font-family: fonts.$user-description;
         font-size: 1.05em;
       }
     }
