--- a/src/common/SCSS/abstracts/_fonts.scss
+++ b/src/common/SCSS/abstracts/_fonts.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Mohave&family=Rajdhani&family=Ropa+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mohave&family=Rajdhani&family=Raleway&family=Ropa+Sans&display=swap");
 
-$primary-font: 'Ropa Sans', sans-serif;
-$header-font: 'Rajdhani', sans-serif;
-$info-font: 'Mohave', sans-serif;
+$primary-font: "Ropa Sans", sans-serif;
+$header-font: "Rajdhani", sans-serif;
+$user-description: "Raleway", sans-serif;
+$info-font: "Mohave", sans-serif;
