--- a/src/common/SCSS/Slides.scss
+++ b/src/common/SCSS/Slides.scss
@@ -2,91 +2,173 @@
 @use "./abstracts/colors";
 
 .frontboard {
+  font-family: fonts.$header-font;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  width: 35vw;
+  height: 100%;
+  border-radius: 25px;
+  z-index: 2;
+  box-shadow: 15px 10px 26px 0px rgba(0, 0, 0, 0.61);
+
+  %slide {
     position: relative;
     display: flex;
-    justify-content: center;
-    background-color: white;
-    width: 35vw;
-    height: 100%;
-    border-radius: 25px;
-    z-index: 2;
-    box-shadow: 15px 10px 26px 0px rgba(0, 0, 0, 0.61);
+    flex-direction: column;
+    width: 80%;
+    margin: 20px 10px;
+  }
 
-    .slide {
+  .price {
+    @extend %slide;
+
+    .info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 20%;
+
+      .destonation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-transform: uppercase;
+        font-family: fonts.$info-font;
+        margin: 15px 0;
+
+        span:nth-child(1) {
+          font-size: 2.5rem;
+          color: darken(colors.$primary-color, 20%);
+        }
+        span:nth-child(2) {
+          font-size: 1.5rem;
+          margin-top: -0.5em;
+          font-style: italic;
+          color: #4e4e4e;
+        }
+      }
+
+      button {
+        background-color: darken(colors.$primary-color, 15%);
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+        border-radius: 50px;
+      }
+    }
+    .attraction {
+      height: 70%;
+      overflow: hidden;
+      &_space_between {
+        display: flex;
+        justify-content: space-between;
+        margin: 0.5rem 0;
+
+        .activity {
+          font-weight: 500;
+        }
+        .value {
+          font-weight: 900;
+        }
+      }
+    }
+    .total {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 10%;
+      margin: 0;
+      border-top: 1px solid black;
+      background-color: white;
+      font-weight: 900;
+    }
+  }
+
+  .contact {
+    @extend %slide;
+
+    &_value {
+      margin-left: 1rem;
+    }
+
+    .message {
+      margin-top: 5px;
+      padding-top: 5px;
+      border: 3px solid darken(colors.$primary-color, 15%);
+      border-radius: 1rem;
+      width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
-      width: 80%;
-      margin: 20px 10px;
-      .info {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 20%;
+      align-items: center;
+      position: relative;
 
-        .destonation {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          text-transform: uppercase;
-          font-family: fonts.$info-font;
-          margin: 15px 0;
+      textarea {
+        width: 90%;
+        height: 80%;
+        background-color: inherit;
+        border: none;
+        outline: none;
+        text-decoration: none;
+        resize: none;
+      }
 
-          span:nth-child(1) {
-            font-size: 2.5rem;
-            color: darken(colors.$primary-color, 20%);
-          }
-          span:nth-child(2) {
-            font-size: 1.5rem;
-            margin-top: -0.5em;
-            font-style: italic;
-            color: #4e4e4e;
-          }
-        }
+      input {
+        height: 45px;
+        width: 45px;
+        border: none;
+        border-radius: 100px;
+        background-color: darken(colors.$primary-color, 4%);
+        transition: ease-in-out 0.2s;
+        position: absolute;
+        bottom: 5px;
+        right: 5px;
 
-        button {
+        &:hover {
           background-color: darken(colors.$primary-color, 15%);
-          width: 50px;
-          height: 50px;
-          font-size: 20px;
-          // padding: 20px;
-          border-radius: 50px;
         }
       }
-      &_price {
-        display: flex;
-        justify-content: space-between;
-        margin: 5px 0;
+    }
+    &_space_around {
+      display: flex;
+      justify-content: space-around;
+      margin: 0.5rem 0;
+
+      svg {
+        color: darken(colors.$primary-color, 15%);
       }
-      .activity {
-        font-weight: 500;
-      }
-      .price {
-        font-weight: 900;
-      }
-      .total {
-        // position:absolute;
-        bottom:0;
-        font-weight: 900;
+    }
+    &_left {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin: 0.5rem 0;
+
+      svg {
+        color: colors.$header-color;
       }
     }
   }
+}
 
-  .backboard {
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: right;
+.backboard {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: right;
+  width: fit-content;
+  height: 100%;
+  border-radius: 25px;
+  z-index: 1;
+  left: -5%;
+
+  img {
     width: fit-content;
-    height: 100%;
     border-radius: 25px;
-    z-index: 1;
-    left: -5%;
-
-    img {
-      width: fit-content;
-      border-radius: 25px;
-      opacity: 60%;
-      height: inherit;
-      object-fit: fill;
-    }
+    opacity: 60%;
+    height: inherit;
+    object-fit: fill;
   }
+}
