--- a/src/common/SCSS/Slides.scss
+++ b/src/common/SCSS/Slides.scss
@@ -68,6 +68,8 @@
 
         .activity {
           font-weight: 500;
+          word-break: break-all;
+          width: 85%;
         }
         .value {
           font-weight: 900;
@@ -113,6 +115,7 @@
         outline: none;
         text-decoration: none;
         resize: none;
+        font-size: 0.9rem;
       }
 
       input {
@@ -125,6 +128,7 @@
         position: absolute;
         bottom: 5px;
         right: 5px;
+        @include fonts.responsiveFont(0.75em, null);
 
         &:hover {
           background-color: darken(colors.$primary-color, 15%);
@@ -140,6 +144,116 @@
         color: darken(colors.$primary-color, 15%);
       }
     }
+    &_left {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin: 0.5rem 0;
+
+      svg {
+        color: colors.$header-color;
+      }
+    }
+    
+    &_activity {
+      block-size: 2rem;
+    }
+  }
+
+  .opinion {
+    @extend %slide;
+    justify-content: space-between;
+
+    &_space_between {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0.5rem 0;
+
+      .rate {
+        .overall {
+          font-size: 35px;
+        }
+        .ratings {
+          margin-top: -6px;
+          font-style: italic;
+          font-weight: 300;
+          color: #575757;
+        }
+      }
+      button {
+        background-color: colors.$header-color;
+        color: white;
+        width: 50%;
+        height: fit-content;
+        padding: 10px 20px;
+        border-radius: 1rem;
+      }
+    }
+    .container {
+      display: flex;
+      justify-content: center;
+      height: fit-content;
+      overflow: hidden;
+      .review {
+        background-color: darken(colors.$primary-color, 3%);
+        padding: 10px;
+        border-radius: 1rem;
+        margin-bottom: 10px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        .userInfo {
+          display: flex;
+          align-items: center;
+
+          img {
+            object-fit: cover;
+            height: 4rem;
+            width: 4rem;
+            border-radius: 50px;
+          }
+
+          .data {
+            display: flex;
+            flex-direction: column;
+            margin-left: 1rem;
+            .fullname {
+            }
+            .rate {
+            }
+          }
+        }
+        .comment {
+        }
+      }
+    }
+    .dotts {
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      %dott {
+        height: 10px;
+        width: 10px;
+        border-radius: 50px;
+        background-color: gray;
+        margin: 0 2px;
+      }
+
+      .dott {
+        @extend %dott;
+
+        &_current {
+          @extend %dott;
+          background-color: darken(colors.$primary-color, 20%);
+        }
+      }
+    }
+
     &_left {
       display: flex;
       justify-content: flex-start;
@@ -169,6 +283,7 @@
     border-radius: 25px;
     opacity: 60%;
     height: inherit;
-    object-fit: fill;
+    width: 20vw;
+    object-fit: cover;
   }
 }
