+JSON-server data, About Me page, changed animation

--- a/src/common/SCSS/abstracts/_media_query.scss
+++ b/src/common/SCSS/abstracts/_media_query.scss
@@ -390,7 +390,7 @@
             .options {
               position: relative;
               height: 5vh;
-              width: 100%;
+              width: 97vw;
               margin-top:0.5rem 0;
               overflow-x: overlay;
               white-space: nowrap;
