--- a/src/common/SCSS/Slides.scss
+++ b/src/common/SCSS/Slides.scss
@@ -243,6 +243,7 @@
         border-radius: 50px;
         background-color: gray;
         margin: 0 2px;
+        cursor:pointer;
       }
 
       .dott {
